k8s/customer-insight-api/customer-insight-api-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '35'
  name: customer-insight-api
  generation: 45
  namespace: mobile-apps
  labels:
    app: customer-insight-api
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-insight-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: customer-insight-api
        app.kubernetes.io/instance: customer-insight-api
        version: 1.59.1
      annotations:
        sidecar.istio.io/bootstrapOverride: envoy-custom-bootstrap-config
        sidecar.istio.io/proxyMemoryLimit: 256Mi
        prometheus.io/port: '8080'
        prometheus.io/path: /actuator/prometheus
        sidecar.istio.io/proxyCPU: 1500m
        sidecar.istio.io/proxyMemory: 256Mi
        prometheus.io/scrape: 'true'
        logCollectorSystemLabel: mobile
    spec:
      restartPolicy: Always
      serviceAccountName: default
      schedulerName: default-scheduler
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/app
                    operator: Exists
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - customer-insight-api
                topologyKey: datacenter
      terminationGracePeriodSeconds: 30
      dnsConfig:
        options:
          - name: ndots
            value: '2'
      securityContext:
        runAsUser: 100000
        runAsGroup: 200000
        fsGroup: 300000
      containers:
        - resources:
            limits:
              memory: 13768Mi
            requests:
              cpu: '2'
              memory: 13768Mi
          readinessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - '-c'
                  - sleep 5
          name: customer-insight-api
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
            - name: custom-bootstrap-volume
              mountPath: /etc/istio/custom-bootstrap
            - name: logback
              mountPath: /var/run
            - name: cacerts
              mountPath: /var/run/secrets/java.io
            - name: tmpfs
              mountPath: /tmp
            - name: hadoop-config
              readOnly: true
              mountPath: /srv/java_ci/hadoop/
          terminationMessagePolicy: File
          image: 'eco.binary.bank.ru/customer-insight-api:1.59.1'
      serviceAccount: default
      volumes:
        - name: logback
          configMap:
            name: logback-config-2.0.15
            defaultMode: 420
        - name: custom-bootstrap-volume
          configMap:
            name: envoy-custom-bootstrap-config
            defaultMode: 420
        - name: cacerts
          secret:
            secretName: cacerts
            defaultMode: 420
        - name: tmpfs
          emptyDir: {}
        - name: hadoop-config
          projected:
            sources:
              - secret:
                  name: hadoop-tech-customer-insight-api.keytab
              - secret:
                  name: hadoop-krb5.conf
              - secret:
                  name: hadoop-java.login.config
              - configMap:
                  name: hadoop-core-site.xml
              - configMap:
                  name: hadoop-hdfs-site.xml
            defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
