k8s/customer-insight-api/customer-insight-api-virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    helm.sh/chart: am-chart-0.1.0
    meta.helm.sh/release-name: customer-insight-api
    meta.helm.sh/release-namespace: mobile-apps
  name: customer-insight-api
  generation: 3
  namespace: mobile-apps
  labels:
    app.kubernetes.io/managed-by: Helm
spec:
  hosts:
    - customer-insight-api.mobile-apps.svc.cluster.local
  http:
    - route:
        - destination:
            host: customer-insight-api.mobile-apps.svc.cluster.local
            subset: default
